add basic html template

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ask mate v 1.0</title>
 </head>
 <body>
+<h1>Ask Mate v 1.0</h1><br>
+{% block content %}{% endblock %}             <! -- here goes child template -->
 
 </body>
 </html>
