add list questions template

--- a/templates/list.html
+++ b/templates/list.html
@@ -5,12 +5,19 @@
 &nbsp;
 <a href="/ask">Ask question </a> <br><br>
 
+id,submission_time,view_number,vote_number,title,message,image
+
     <table style="width:70%">
         <thead class="thead-light">
         <tr>
             <th scope="col">Id</th>
-            <th scope="col">Author</th>
+            <th scope="col">Submission time</th>
+            <th scope="col">View number</th>
+            <th scope="col">Vote number</th>
             <th scope="col">Title</th>
+            <th scope="col">Message</th>
+            <th scope="col">Image</th>
+
         </tr>
         </thead>
         <!-- table rows -->
