--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>Ask mate v 1.0</title>
 </head>
 <body>
-<h1>Ask Mate v 1.0</h1><br>
-{% block content %}{% endblock %}             <! -- here goes child template -->
+<header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <div class="container">
+  <a class="navbar-brand" href="#">
+    <img src="/static/AskMatelogo2.png" width="90" height="35" alt="">
+  </a>
+        </div>
+</nav>
+
+<main role="main" class="container">
+      <div class="row">
+        <div class="col-md-12">
+          {% block content %}{% endblock %}
+        </div>
+
+          </div>
+      </main>
+
+<! -- here goes child template -->
+
 
 </body>
 </html>
