--- a/templates/list.html
+++ b/templates/list.html
@@ -2,7 +2,7 @@
 {% block content %}
 &nbsp;
 <div class="container">
-    <a class="btn btn-secondary" href='/add-question' role="button">Add question:</a>
+    <a class="btn btn-secondary" href='/add-question' role="button">Add question</a>
 </div>
 <br>
     <div class="offset">
@@ -19,13 +19,14 @@
 
         </tr>
         </thead>
-        <!-- table rows -->
-        {% for dict_item in all_questions %}
+        {% for question in all_questions %}
         <tr>
-            {% for value in dict_item.values() %}
-            <td> {{ value }} </td>
-            {% endfor %}
-        </tr>
+                <td>{{ question['id'] }}</td>
+                <td>{{ question['submission_time'] }}</td>
+                <td><a href="/question/<question_id">{{ question['title'] }}</a></td>
+                <td>{{ question['message']}}</td>
+
+            </tr>
         {% endfor %}
     </table>
     </div>
