--- a/templates/list.html
+++ b/templates/list.html
@@ -23,7 +23,7 @@
         <tr>
                 <td>{{ question['id'] }}</td>
                 <td>{{ question['submission_time'] }}</td>
-                <td><a href="/question/<question_id">{{ question['title'] }}</a></td>
+                <td><a href="/question/{{question['id']}}">{{ question['title'] }}</a></td>
                 <td>{{ question['message']}}</td>
 
             </tr>
