--- a/templates/question.html
+++ b/templates/question.html
@@ -2,7 +2,7 @@
 {% block content %}
 &nbsp;
 <div class="container">
-    <a class="btn btn-secondary" href='/question/<question_id>/new-answer' role="button">Add answer</a>
+    <a class="btn btn-secondary" href="/question/{{question['id']}}/new-answer" role="button">Add answer</a>
 </div>
 
 <br>
