add variable question to route question/<question_id> add card showing question while reading/submitting answers

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
 <br>
+<div class="card">
+  <div class="card-body">
+    {{question['message']}}
+  </div>
+</div>
 
 <div class="container">
 
