--- a/templates/list.html
+++ b/templates/list.html
@@ -5,7 +5,21 @@
     <a class="btn btn-secondary" href='/add-question' role="button">Add question</a>
 </div>
 <br>
-    <div class="offset">
+<form action="/list/sorted" method="get">Sort by:
+        <label for="attribute">Name</label>
+        <select id="attribute" name="attribute">
+            <option value="submission_time">Time</option>
+            <option value="title">Title</option>
+        </select>
+        <label for="order">Order</label>
+        <select id="order" name="order">
+            <option value="asc">Ascending</option>
+            <option value="desc">Descending</option>
+        </select>
+        <button type="submit" value="Submit">Sort</button>
+    </form>
+
+<div class="offset">
     <table class="table table-hover">
         <thead class="thead-light">
         <tr>
@@ -21,14 +35,14 @@
         </thead>
         {% for question in all_questions %}
         <tr>
-                <td>{{ question['id'] }}</td>
-                <td>{{ question['submission_time'] }}</td>
-                <td><a href="/question/<question_id">{{ question['title'] }}</a></td>
-                <td>{{ question['message']}}</td>
+            <td>{{ question['id'] }}</td>
+            <td>{{ question['submission_time'] }}</td>
+            <td><a href="/question/<question_id">{{ question['title'] }}</a></td>
+            <td>{{ question['message']}}</td>
 
-            </tr>
+        </tr>
         {% endfor %}
     </table>
-    </div>
+</div>
 
 {% endblock%}
