--- a/templates/answer.html
+++ b/templates/answer.html
@@ -3,28 +3,22 @@
 <br>
 <div class="card">
   <div class="card-body">
-    {{question['message']}}
+    {{ question['message'] }}
   </div>
 </div>
-
 <div class="container">
-
 <form action="{{ form_url }}" method="post">
-
-        <p><label for="message">Your answer</label><br>
-            <textarea id="message" name="message" placeholder="Enter your answer here" rows="5" cols="60" required=on></textarea></p>
-
-
+        <p>
+            <label for="message">Your answer</label><br>
+            <textarea id="message" name="message" placeholder="Enter your answer here" rows="5" cols="60" required=on>
+            </textarea>
+        </p>
   <div class="custom-file">
     <input type="file" class="custom-file-input" name='image' id="inputGroupFile01">
     <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
   </div>
-</div>
 <br>
-
-
-
-    <button type="submit">{{button_title}}</button>
+    <button type="submit">{{ button_title }}</button>
 </form>
 </div>
 
