--- a/templates/list.html
+++ b/templates/list.html
@@ -18,7 +18,6 @@
         </select>
         <button type="submit" value="Submit">Sort</button>
     </form>
-
 <div class="offset">
     <table class="table table-hover">
         <thead class="thead-light">
@@ -34,13 +33,12 @@
         </tr>
         </thead>
         {% for question in all_questions %}
-        <tr>
-            <td>{{ question['id'] }}</td>
-            <td>{{ question['submission_time'] }}</td>
-            <td><a href="/question/<question_id">{{ question['title'] }}</a></td>
-            <td>{{ question['message']}}</td>
-
-        </tr>
+            <tr>
+                <td>{{ question['id'] }}</td>
+                <td>{{ question['submission_time'] }}</td>
+                <td><a href="/question/{{ question['id'] }}">{{ question['title'] }}</a></td>
+                <td>{{ question['message'] }}</td>
+            </tr>
         {% endfor %}
     </table>
 </div>
