changed routing in navbar-brand layout.html

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -10,8 +10,8 @@
 <form action="{{ form_url }}" method="post">
         <p>
             <label for="message">Your answer</label><br>
-            <textarea id="message" name="message" placeholder="Enter your answer here" rows="5" cols="60" required=on>
-            </textarea>
+            <textarea id="message" name="message" placeholder="Enter your answer here" rows="5" cols="60"
+                      required=on></textarea>
         </p>
   <div class="custom-file">
     <input type="file" class="custom-file-input" name='image' id="inputGroupFile01">
