--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-  <a class="navbar-brand" href="/list">
+  <a class="navbar-brand" href="/">
     <img src="/static/AskMatelogo2.png" width="90" height="35" alt="">
   </a>
         </div>
