--- a/templates/list.html
+++ b/templates/list.html
@@ -22,19 +22,17 @@
     <table class="table table-hover">
         <thead class="thead-light">
         <tr>
-            <th scope="col">Id</th>
             <th scope="col">Submission time</th>
             <!-- <th scope="col">View number</th>
             <th scope="col">Vote number</th> -->
             <th scope="col">Title</th>
             <th scope="col">Message</th>
-            <th scope="col">Image</th>
+            <!-- <th scope="col">Image</th> -->
 
         </tr>
         </thead>
         {% for question in all_questions %}
             <tr>
-                <td>{{ question['id'] }}</td>
                 <td>{{ question['submission_time'] }}</td>
                 <td><a href="/question/{{ question['id'] }}">{{ question['title'] }}</a></td>
                 <td>{{ question['message'] }}</td>
