--- a/templates/answer.html
+++ b/templates/answer.html
@@ -13,10 +13,10 @@
             <textarea id="message" name="message" placeholder="Enter your answer here" rows="5" cols="60"
                       required=on></textarea>
         </p>
-  <div class="custom-file">
+  <!--<div class="custom-file">
     <input type="file" class="custom-file-input" name='image' id="inputGroupFile01">
     <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-  </div>
+  </div>-->
 <br>
     <button type="submit">{{ button_title }}</button>
 </form>
