rewrite 'get all data' to SQL; update view and server route

--- a/templates/list.html
+++ b/templates/list.html
@@ -32,10 +32,12 @@
         </tr>
         </thead>
         {% for question in all_questions %}
+            <div id = question>
             <tr>
-                <td>{{ question['submission_time'] }}</td>
-                <td><a href="/question/{{ question['id'] }}">{{ question['title'] }}</a></td>
-                <td>{{ question['message'] }}</td>
+                <td>{{question.submission_time }}</td>
+                <td><a href="/question/{{ question.id }}">{{ question.title }}</a></td>
+                <td>{{ question.message }}</td>
+            </div>
             </tr>
         {% endfor %}
     </table>
