--- a/templates/question.html
+++ b/templates/question.html
@@ -2,11 +2,11 @@
 {% block content %}
 <br>
 <div class="card">
-  <h6 class="card-header">Question: {{ question['title'] }}</h6>
+  <h6 class="card-header">Question: {{ question.title}}</h6>
   <div class="card-body">
-      {{ question['message'] }}
+      {{ question.message }}
       <br><br>
-      <a class="btn btn-secondary" href="/question/{{question['id']}}/new-answer" role="button">Add answer</a>
+      <a class="btn btn-secondary" href="/question/new-answer/{{question.id}}" role="button">Add answer</a>
   </div>
 <br>
 <div class="offset">
@@ -18,8 +18,8 @@
         </tr>
         </thead>
         {% for answer in answers %}
-                <td>{{ answer['submission_time'] }}</td>
-                <td>{{ answer['message']}}</td>
+                <td>{{ answer.submission_time }}</td>
+                <td>{{ answer.message}}</td>
             </tr>
         {% endfor %}
     </table>
