changed variable into template

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -3,7 +3,7 @@
 <br>
 <div class="card">
     <div class="card-body">
-        {{ what_to_comment }}
+        {{ answer['message'] }}
     </div>
 </div>
 <div class="container">
