--- a/templates/question.html
+++ b/templates/question.html
@@ -2,7 +2,7 @@
 {% block content %}
 <br>
 <div class="card">
-  <h6 class="card-header">Question: {{ question.title}}</h6>
+    <h6 class="card-header">Question: <strong>{{ question.title }}</strong></h6>
   <div class="card-body">
       {{ question.message }}
       <br><br>
