--- a/templates/question.html
+++ b/templates/question.html
@@ -2,29 +2,43 @@
 {% block content %}
 <br>
 <div class="card">
-  <h6 class="card-header">Question: {{ question.title}}</h6>
-  <div class="card-body">
-      {{ question.message }}
-      <br><br>
-      <a class="btn btn-secondary" href="/question/new-answer/{{question.id}}" role="button">Add answer</a>
-  </div>
-<br>
-<div class="offset">
-    <table class="table table-hover">
-        <thead class="thead-light">
-        <tr>
-            <th scope="col">Submission time</th>
-            <th scope="col">Message</th>
-            <th scope="col">Edit answer</th>
-        </tr>
-        </thead>
-        {% for answer in answers %}
-                <td>{{ answer.submission_time }}</td>
-                <td>{{ answer.message}}</td>
-                <td><a class="btn btn-secondary" href='/edit-answer/{{answer.id}}' role="button">Edit answer</a></td>
+    <h6 class="card-header">Question: {{ question.title}}</h6>
+    <div class="card-body">
+        {{ question.message }}
+        <br><br>
+        <a class="btn btn-secondary" href="/question/new-answer/{{question.id}}" role="button">Add answer</a>
+    </div>
+    <br>
+    <div class="offset">
+        <table class="table table-hover">
+            <thead class="thead-light">
+            <tr>
+                <th scope="col">Submission time</th>
+                <th scope="col">Message</th>
+                <th scope="col">Edit answer</th>
             </tr>
-        {% endfor %}
-    </table>
+            </thead>
+            {% for answer in answers %}
+            <tr>
+                <td>{{ answer.submission_time }}</td>
+                <td><a href="/edit-answer/{{answer.id}}">{{ answer.message }}</a></td>
+                <td><a class="btn btn-secondary" href='/answer/new-comment/{{answer.id}}' role="button">Add comment</a>
+                </td>
+            </tr>
+            {% if all_comments %}
+            {% for comment in all_comments %}
+            <tr class="table-secondary">
+                {%if comment.answer_id == answer.id %}
+                <td></td>
+                <td>{{ comment.submission_time }}</td>
+                <td><a href="/edit-comment/{{comment.id}}">{{ comment.message}}</a></td>
+                <td></td>
+                {% endif %}
+            </tr>
+            {% endfor %}
+            {% endif %}
+            {% endfor %}
+        </table>
     </div>
 </div>
 
