--- a/templates/list.html
+++ b/templates/list.html
@@ -41,10 +41,10 @@
     <table class="table table-hover">
         <thead class="thead-light">
         <tr>
-            <th scope="col">Submission time</th>
+            <th scope="col">Date</th>
             <!-- <th scope="col">View number</th>
             <th scope="col">Vote number</th> -->
-            <th scope="col">Title</th>
+            <th scope="col">Question</th>
             <th scope="col">Message</th>
             <!-- <th scope="col">Image</th> -->
 
