--- a/templates/question.html
+++ b/templates/question.html
@@ -13,8 +13,8 @@
         <table class="table table-hover">
             <thead class="thead-light">
             <tr>
-                <th scope="col">Submission time</th>
-                <th scope="col">Message</th>
+                <th scope="col">Date</th>
+                <th scope="col">Answer</th>
                 <th scope="col">Edit answer</th>
             </tr>
             </thead>
@@ -29,10 +29,9 @@
             {% for comment in all_comments %}
             <tr class="table-secondary">
                 {%if comment.answer_id == answer.id %}
-                <td></td>
-                <td>{{ comment.submission_time }}</td>
-                <td><a href="/edit-comment/{{comment.id}}">{{ comment.message}}</a></td>
-                <td></td>
+                    <td>{{ comment.submission_time }}</td>
+                    <td></td>
+                    <td><a href="/edit-comment/{{comment.id}}">{{ comment.message}}</a></td>
                 {% endif %}
             </tr>
             {% endfor %}
