--- a/templates/question.html
+++ b/templates/question.html
@@ -15,7 +15,7 @@
             <tr>
                 <th scope="col">Date</th>
                 <th scope="col">Answer</th>
-                <th scope="col">Edit answer</th>
+                <th scope="col"></th>
             </tr>
             </thead>
             {% for answer in answers %}
