Added logic layout for function edit_answer

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -10,6 +10,7 @@
     </div>
 </div>
 <div class="container">
+    {% if warning%}<p>{{warning}}</p>{%endif%}
 <form action="{{ form_url }}" method="post">
         <p>
             <label for="message">Your answer</label><br>
