--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}  <!-- extends to parent template -->
 {% block content %}
+{% if notice%}<p>{{notice}}</p>{%endif%}
 <form action='{{  form_url  }}' method="POST">
     <input type="text" name="username" placeholder="username" value="{{ username }}" required>
     <input type="text" name="password" placeholder="password" value="{{ password }}" required>
