--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,26 +19,32 @@
             </a>
         </div>
         <div class="container">
-            <a class="btn btn-secondary" href='/registration' role="button">Sign up</a>
+                <form action='/login' method="POST">
+                    <input type="text" name="username" placeholder="username" value="{{ username }}" required>
+                    <input type="text" name="password" placeholder="password" value="{{ password }}" required>
+
+                    <div class="btn-group" role="group" aria-label="Login group">
+                        <a class="btn btn-outline-light"role="button" a href='/login'>Log in</a>
+                        <a class="btn btn-outline-light" role="button" color="light" href='/registration'>Create
+                            Account </a>
+                    </div>
+                </form>
         </div>
-        <div class="container">
-            <a class="btn btn-secondary" href='/login' role="button">Sign in</a>
-        </div>
-        <!--<div class="container">-->
+            <!--<div class="container">-->
             <!--<a class="btn btn-secondary" href='/logout' role="button">Log out</a>-->
-        <!--</div>-->
+            <!--</div>-->
     </nav>
 </header>
-    <main role="main" class="container">
-        <div class="row">
-            <div class="col-md-12">
-                {% block content %}{% endblock %}
-            </div>
-
+<main role="main" class="container">
+    <div class="row">
+        <div class="col-md-12">
+            {% block content %}{% endblock %}
         </div>
-    </main>
 
-    <! -- here goes child template -->
+    </div>
+</main>
+
+<! -- here goes child template -->
 
 </body>
 </html>
