--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}  <!-- extends to parent template -->
 {% block content %}
+<br>
+    <div class="container">
 {% if notice%}<p>{{notice}}</p>{%endif%}
 <form action='{{  form_url  }}' method="POST">
     <input type="text" name="username" placeholder="username" value="{{ username }}" required>
     <input type="text" name="password" placeholder="password" value="{{ password }}" required>
     <button type="submit">Sign up</button>
 </form>
+    </div>
 {% endblock%}
