--- a/templates/list.html
+++ b/templates/list.html
@@ -1,29 +1,16 @@
 {% extends "layout.html" %}  <!-- extends to parent template -->
 {% block content %}
 &nbsp;
-<div class="container">
-    <div class="row justify-content-between">
-        <div class="col">
-            <br>
-            <a class="btn btn-secondary" href='/add-question' role="button">Add question</a>
-        </div>
-        <div class="col align-self-end">
-            <form action='/list/search/'
-                  method="get">
-                <label for="expression">Search for:</label><br>
-                <textarea name="expression" id="expression" placeholder='What are you searching for?' cols="40"
-                          value="{{expression}}"></textarea>
-                <button class="btn btn-secondary"  type="submit">Search</button>
-            </form>
-        </div>
-    </div>
-</div>
 <br>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <form action="/list/sorted" method="get">Sort by:
-                <label for="attribute">Name</label>
+    <br>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-info nav-fill">
+
+    <ul class="navbar-nav mr-auto">
+      <a class="nav-item active">
+        <form action="/list/sorted" method="get">
+            <button class="btn btn-sm btn-secondary" type="submit" value="Submit">Sort</button>
                 <select id="attribute" name="attribute">
                     <option value="submission_time">Time</option>
                     <option value="title">Title</option>
@@ -33,12 +20,25 @@
                     <option value="asc">Asc</option>
                     <option value="desc">Desc</option>
                 </select>
-                <button class="btn btn-secondary" type="submit" value="Submit">Sort</button>
             </form>
-        </div>
-    </div>
-</div>
-<div class="offset">
+      </a>
+    </ul>
+     <a class="nav-item">
+         <a class="btn btn-secondary"  href='/add-question' role="button">Add question</a>
+     </a>
+
+    <form class="form-inline my-2 my-lg-0"action='/list/search/'
+                  method="get">
+      <input class="form-control mr-sm-2" id="expression" type="search" placeholder="Search for..." aria-label="expression" value="{{expression}}">
+      <button class="btn btn-sm btn-secondary" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+
+    <br><br>
+
+<div class="col" align =" self-end">
     <table class="table table-hover">
         <thead class="thead-light">
         <tr>
@@ -62,5 +62,6 @@
     </table>
     {% if warning%}<p>{{warning}}</p>{%endif%}
 </div>
+
 
 {% endblock%}
