--- a/templates/comment.html
+++ b/templates/comment.html
@@ -5,6 +5,13 @@
 
 </div>
 <div class="container">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <p>{{message}}</p>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
     <form action="{{ form_url }}" method="post">
         <p>
             <label for="message">Your comment</label><br>
