--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,30 +19,31 @@
             </a>
         </div>
         {% if session['username'] %}
-        <div class="container" >
-            <p  class="text-white">Hello {{session['username']}}</p>
+        <div class="container">
+            <p class="text-white">Hello {{session['username']}}</p>
         </div>
         {% endif %}
+        {% if not session['username'] %}
         <div class="container">
-                <form action='/login' method="POST">
-                    {% if not session['username'] %}
-                    <input type="text" name="username" placeholder="username" value="{{ username }}" required>
-                    <input type="text" name="password" placeholder="password" value="{{ password }}" required>
-                    {% endif %}
-                    <div class="btn-group" role="group" aria-label="Login group">
-                        {% if not session['username'] %}
-                        <a class="btn btn-outline-light"role="button" href='/login'>Log in</a>
-                        <a class="btn btn-outline-light" role="button" color="light" href='/registration'>Create
-                            Account </a>
-                        {% else %}
-                        <a class="btn btn-outline-light"role="button" href='/logout'>Log out</a>
-                        {% endif %}
-                    </div>
-                </form>
+            <form action='/login' method="POST">
+                <input type="text" name="username" placeholder="username" value="{{ username }}" required>
+                <input type="text" name="password" placeholder="password" value="{{ password }}" required>
+                <button type="submit">Log in</button>
+            </form>
         </div>
-            <!--<div class="container">-->
-            <!--<a class="btn btn-secondary" href='/logout' role="button">Log out</a>-->
-            <!--</div>-->
+        <div class="container">
+            <a class="btn btn-outline-light" role="button" color="light" href='/registration'>Create
+                Account </a>
+        </div>
+        {% else %}
+        <div class="container">
+        <a class="btn btn-outline-light" role="button" href='/logout'>Log out</a>
+        </div>
+        {% endif %}
+
+        <!--<div class="container">-->
+        <!--<a class="btn btn-secondary" href='/logout' role="button">Log out</a>-->
+        <!--</div>-->
     </nav>
 </header>
 <main role="main" class="container">
