--- a/templates/question.html
+++ b/templates/question.html
@@ -1,60 +1,79 @@
 {% extends "layout.html" %}  <!-- extends to parent template -->
 {% block content %}
-<br>
-<div class="card">
-    <h6 class="card-header">Question: {{ question.title}}</h6>
-    <div class="card-body">
-        {{ question.message }}
-        <br><br>
-        <a class="btn btn-secondary" href="/question/new-answer/{{question.id}}" role="button">Add answer</a>
-        <form action="/question/{{ question['id'] }}/delete" method="post">
-            <button class="btn btn-secondary" type="submit">Delete question</button>
-        </form>
-    </div>
-
     <br>
-    <div class="offset">
-        <table class="table table-hover">
-            <thead class="thead-light">
-            <tr>
-                <th scope="col">Submission time</th>
-                <th scope="col">Message</th>
-                <th scope="col"></th>
-                <th scope="col">Delete</th>
-            </tr>
-            </thead>
-            {% for answer in answers %}
-            <tr>
-                <td>{{ answer.submission_time }}</td>
-                <td><a href="/edit-answer/{{answer.id}}">{{ answer.message }}</a></td>
-                <td><a class="btn btn-secondary" href='/answer/new-comment/{{answer.id}}' role="button">Add comment</a>
-                </td>
-                <td>
-                    <form action="/answer/{{ answer['id'] }}/delete" method="post">
-                        <button class="btn btn-secondary" type="submit">Delete answer</button>
-                    </form>
-                </td>
-            </tr>
-            {% if all_comments %}
-            {% for comment in all_comments %}
-            <tr class="table-secondary">
-                {%if comment.answer_id == answer.id %}
-                <td></td>
-                <td>{{ comment.submission_time }}</td>
-                <td><a href="/edit-comment/{{comment.id}}">{{ comment.message}}</a></td>
-                <td>
-                    <form action="/comment/{{ comment['id'] }}/delete" method="post">
-                        <button class="btn btn-secondary" type="submit">Delete comment</button>
-                    </form>
-                </td>
-                {% endif %}
-            </tr>
-            {% endfor %}
-            {% endif %}
-            {% endfor %}
-        </table>
-    </div>
-</div>
+    <main role="main" class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="content-section" align="center">
+                    <h4>Menu:</h4>
+                    <ul class="list-group">
+                        <a class="btn btn-secondary btn-block" href="/question/new-answer/{{ question.id }}" role="button">Add
+                            answer</a><br>
+                        <form action="/question/{{ question['id'] }}/delete" method="post">
+                            <button class="btn btn-secondary btn-block" type="submit">Delete question</button>
+                        </form>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="card">
+                    <h6 class="card-header">Question: {{ question.title }}</h6>
+                    <div class="card-body">
+                        {{ question.message }}
+                        <br><br>
+                    </div>
+
+                    <br>
+                    <div class="offset">
+                        <table class="table table-hover">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Submission time</th>
+                                <th scope="col">Message</th>
+                                <th scope="col"></th>
+                                <th scope="col">Delete</th>
+                            </tr>
+                            </thead>
+                            {% for answer in answers %}
+                                <tr>
+                                    <td>{{ answer.submission_time }}</td>
+                                    <td><a href="/edit-answer/{{ answer.id }}">{{ answer.message }}</a></td>
+                                    <td><a class="btn btn-secondary" href='/answer/new-comment/{{ answer.id }}'
+                                           role="button">Add
+                                        comment</a>
+                                    </td>
+                                    <td>
+                                        <form action="/answer/{{ answer['id'] }}/delete" method="post">
+                                            <button class="btn btn-secondary" type="submit">Delete answer</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                                {% if all_comments %}
+                                    {% for comment in all_comments %}
+                                        <tr class="table-secondary">
+                                            {% if comment.answer_id == answer.id %}
+                                                <td></td>
+                                                <td>{{ comment.submission_time }}</td>
+                                                <td><a href="/edit-comment/{{ comment.id }}">{{ comment.message }}</a>
+                                                </td>
+                                                <td>
+                                                    <form action="/comment/{{ comment['id'] }}/delete" method="post">
+                                                        <button class="btn btn-secondary" type="submit">Delete comment
+                                                        </button>
+                                                    </form>
+                                                </td>
+                                            {% endif %}
+                                        </tr>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
 
 
 {% endblock %}
