--- a/templates/answer.html
+++ b/templates/answer.html
@@ -28,7 +28,7 @@
     <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
   </div>-->
 <br>
-    <button type="submit">{{ button_title }}</button>
+    <button class="btn btn-secondary" type="submit">{{ button_title }}</button>
 </form>
 </div>
 
