--- a/templates/comment.html
+++ b/templates/comment.html
@@ -19,7 +19,7 @@
                         required=on autofocus>{% if edit_comment %}{{ edit_comment['message'] }}{% endif %}</textarea>
         </p>
         <br>
-    <button type="submit">{{ button_title }}</button>
+    <button class="btn btn-secondary" type="submit">{{ button_title }}</button>
 </form>
 </div>
 {% endblock %}
