--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -12,7 +12,7 @@
             {% endwith %}
         </div>
         <div class="card-body">
-            <form action='{{ form_url }}' method="POST">
+            <form action='/registration' method="POST">
                 <input type="text" name="username" placeholder="username" value="{{ username }}" required>
                 <input type="text" name="password" placeholder="password" value="{{ password }}" required>
                 <br><br>
