added functionality to display author of answer

--- a/templates/question.html
+++ b/templates/question.html
@@ -59,7 +59,7 @@
                                 </form>
                             </td>
                             {% endif %}
-                            <td></td>
+                            <td>{{answer.username }}</td>
                         </tr>
                         {% if all_comments %}
                         {% for comment in all_comments %}
