--- a/templates/list.html
+++ b/templates/list.html
@@ -14,14 +14,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info nav-fill">
     <ul class="navbar-nav mr-auto">
         <a class="nav-item active">
+
             <form action="/list/sorted" method="get">
                 <button class="btn btn-sm btn-secondary" type="submit" value="Submit">Sort</button>
-                <select id="attribute" name="attribute">
+                <select class="custom-select-sm" id="attribute" name="attribute">
                     <option value="submission_time">Time</option>
                     <option value="title">Title</option>
                 </select>
-                <label for="order">Order</label>
-                <select id="order" name="order">
+                <select class="custom-select-sm" id="order" name="order">
+                    <option selected>Order</option>
                     <option value="asc">Asc</option>
                     <option value="desc">Desc</option>
                 </select>
