--- a/templates/comment.html
+++ b/templates/comment.html
@@ -15,7 +15,7 @@
     <form action="{{ form_url }}" method="post">
         <p>
             <label for="message">Your comment</label><br>
-            <textarea id="message" name="message" placeholder="Enter your comment here" rows="5" cols="60"
+            <textarea id="message" name="message" autofocus placeholder="Enter your comment here" rows="5" cols="60"
                         required=on autofocus>{% if edit_comment %}{{ edit_comment['message'] }}{% endif %}</textarea>
         </p>
         <br>
