--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,8 +24,8 @@
             {% endif %}
             {% if not session['username'] %}
                 <form action='/login' method="POST">
-                    <input type="text" name="username" placeholder="username" value="{{ username }}" required>
-                    <input type="text" name="password" placeholder="password" value="{{ password }}" required>
+                    <input type="text" name="username" placeholder="username" autofocus value="{{ username }}" required>
+                    <input type="password" name="password" placeholder="password" value="{{ password }}" required>
                     <button class="btn btn-outline-light" type="submit">Log in</button>
                 </form>
                 <a class="btn btn-outline-light" role="button" color="light" href='/registration'>Create
